fixed when no node_modules on host

--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,7 +1,6 @@
-from node:12
+FROM node:12
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE ${API_PORT}
-CMD [ "npm", "run", "dev"]
