--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,7 +1,6 @@
-from node:12
+FROM node:12
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 3000
-CMD [ "npm", "start"]
+EXPOSE ${CLIENT_PORT}
