--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,9 +6,11 @@ services:
       context: ./api
       dockerfile: Dockerfile.dev
     image: wish-api-dev
+    command: npm run dev
     volumes:
-      - ./api:/usr/src/app
-      - /api/node_modules
+      - ./api/:/usr/src/app/
+      - /usr/src/app/node_modules
+    command: npm run dev
     ports:
       - ${API_PORT}:${API_PORT}
     environment:
@@ -23,9 +25,10 @@ services:
     image: wish-client-dev
     volumes:
       - ./client:/usr/src/app
-      - /api/node_modules
+      - /usr/src/app/node_modules
+    command: npm start
     ports:
-      - 3000:3000
+      - ${CLIENT_PORT}:${CLIENT_PORT}
     depends_on:
       - api
   mongo:
